--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.6.0",
+    "@material-ui/icons": "^4.5.1",
     "@types/jest": "24.0.22",
     "@types/material-ui": "^0.21.7",
     "@types/node": "12.12.6",
@@ -17,7 +18,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.2.0",
     "react-simple-chatbot": "^0.6.1",
     "reactstrap": "^8.1.1",
     "sonnet": "0.0.0",
