--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.0.0-beta.5",
     "history": "4.9.0",
     "lodash": "^4.17.4",
+    "material-table": "^1.54.1",
     "material-ui": "^0.20.2",
     "material-ui-background": "^0.1.2",
     "moment": "^2.15.1",
